--- a/random/qotd/index.html
+++ b/random/qotd/index.html
@@ -1,8 +1,11 @@
 <html>
   <head>
+    <style>
+      * { margin: 0 }
+    </style>
   </head>
   <body>
-    <img id="quote" src="" />
+    <img width="100%" height="100%" id="quote" src="" />
 
     <script>
       function listener() {
